Swift/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    FLOAT
    INT
    SQUOTE
    DOUBLE
    STRINGVALUE
    RBRACE
    BOOL
    LBRACE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> expression
Rule 5     statement -> variableDeclaration
Rule 6     statement -> variableReassignment
Rule 7     statement -> print
Rule 8     statement -> ifStatement
Rule 9     print -> PRINT LPAREN RPAREN
Rule 10    print -> PRINT LPAREN IDENTIFIER RPAREN
Rule 11    print -> PRINT LPAREN INTEGER RPAREN
Rule 12    print -> PRINT LPAREN decimal RPAREN
Rule 13    print -> PRINT LPAREN STRING RPAREN
Rule 14    variableReassignment -> IDENTIFIER EQUALS expression
Rule 15    variableReassignment -> IDENTIFIER PEQ expression
Rule 16    variableReassignment -> IDENTIFIER MEQ expression
Rule 17    variableReassignment -> IDENTIFIER MUEQ expression
Rule 18    variableReassignment -> IDENTIFIER DEQ expression
Rule 19    variableDeclaration -> VAR IDENTIFIER EQUALS expression
Rule 20    variableDeclaration -> LET IDENTIFIER EQUALS expression
Rule 21    ifStatement -> IF conditionalStatement codeBlock
Rule 22    ifStatement -> IF conditionalStatement codeBlock elseStatement
Rule 23    elseStatement -> ELSE codeBlock
Rule 24    elseStatement -> ifStatement
Rule 25    codeBlock -> LCURLY statements RCURLY
Rule 26    conditionalStatement -> item boolOP item
Rule 27    conditionalStatement -> TRUE
Rule 28    conditionalStatement -> FALSE
Rule 29    expression -> conjunction
Rule 30    expression -> conjunction OR_OP expression
Rule 31    conjunction -> equality
Rule 32    conjunction -> AND_OP equality
Rule 33    boolOP -> eqOP
Rule 34    boolOP -> relOP
Rule 35    equality -> relation
Rule 36    equality -> relation eqOP equality
Rule 37    eqOP -> EQ_OP
Rule 38    eqOP -> NE_OP
Rule 39    relation -> addition
Rule 40    relation -> addition relOP relation
Rule 41    relOP -> LT_OP
Rule 42    relOP -> LE_OP
Rule 43    relOP -> GT_OP
Rule 44    relOP -> GE_OP
Rule 45    addition -> term
Rule 46    addition -> term addOP addition
Rule 47    addOP -> PLUS
Rule 48    addOP -> MINUS
Rule 49    term -> factor
Rule 50    term -> factor mulOP term
Rule 51    mulOP -> MULT
Rule 52    mulOP -> DIV
Rule 53    mulOP -> MOD
Rule 54    factor -> primary
Rule 55    primary -> literal
Rule 56    literal -> INTEGER
Rule 57    literal -> decimal
Rule 58    literal -> STRING
Rule 59    literal -> IDENTIFIER
Rule 60    literal -> TRUE
Rule 61    literal -> FALSE
Rule 62    item -> INTEGER
Rule 63    item -> IDENTIFIER
Rule 64    item -> STRING
Rule 65    item -> decimal
Rule 66    decimal -> INTEGER . INTEGER
Rule 67    empty -> <empty>

Terminals, with rules where they appear

.                    : 66
AND_OP               : 32
BOOL                 : 
DEQ                  : 18
DIV                  : 52
DOUBLE               : 
ELSE                 : 23
EQUALS               : 14 19 20
EQ_OP                : 37
FALSE                : 28 61
FLOAT                : 
GE_OP                : 44
GT_OP                : 43
IDENTIFIER           : 10 14 15 16 17 18 19 20 59 63
IF                   : 21 22
INT                  : 
INTEGER              : 11 56 62 66 66
LBRACE               : 
LCURLY               : 25
LET                  : 20
LE_OP                : 42
LPAREN               : 9 10 11 12 13
LT_OP                : 41
MEQ                  : 16
MINUS                : 48
MOD                  : 53
MUEQ                 : 17
MULT                 : 51
NE_OP                : 38
OR_OP                : 30
PEQ                  : 15
PLUS                 : 47
PRINT                : 9 10 11 12 13
RBRACE               : 
RCURLY               : 25
RPAREN               : 9 10 11 12 13
SQUOTE               : 
STRING               : 13 58 64
STRINGVALUE          : 
TRUE                 : 27 60
VAR                  : 19
error                : 

Nonterminals, with rules where they appear

addOP                : 46
addition             : 39 40 46
boolOP               : 26
codeBlock            : 21 22 23
conditionalStatement : 21 22
conjunction          : 29 30
decimal              : 12 57 65
elseStatement        : 22
empty                : 
eqOP                 : 33 36
equality             : 31 32 36
expression           : 4 14 15 16 17 18 19 20 30
factor               : 49 50
ifStatement          : 8 24
item                 : 26 26
literal              : 55
mulOP                : 50
primary              : 54
print                : 7
program              : 0
relOP                : 34 40
relation             : 35 36 40
statement            : 2 3
statements           : 1 3 25
term                 : 45 46 50
variableDeclaration  : 5
variableReassignment : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . expression
    (5) statement -> . variableDeclaration
    (6) statement -> . variableReassignment
    (7) statement -> . print
    (8) statement -> . ifStatement
    (29) expression -> . conjunction
    (30) expression -> . conjunction OR_OP expression
    (19) variableDeclaration -> . VAR IDENTIFIER EQUALS expression
    (20) variableDeclaration -> . LET IDENTIFIER EQUALS expression
    (14) variableReassignment -> . IDENTIFIER EQUALS expression
    (15) variableReassignment -> . IDENTIFIER PEQ expression
    (16) variableReassignment -> . IDENTIFIER MEQ expression
    (17) variableReassignment -> . IDENTIFIER MUEQ expression
    (18) variableReassignment -> . IDENTIFIER DEQ expression
    (9) print -> . PRINT LPAREN RPAREN
    (10) print -> . PRINT LPAREN IDENTIFIER RPAREN
    (11) print -> . PRINT LPAREN INTEGER RPAREN
    (12) print -> . PRINT LPAREN decimal RPAREN
    (13) print -> . PRINT LPAREN STRING RPAREN
    (21) ifStatement -> . IF conditionalStatement codeBlock
    (22) ifStatement -> . IF conditionalStatement codeBlock elseStatement
    (31) conjunction -> . equality
    (32) conjunction -> . AND_OP equality
    (35) equality -> . relation
    (36) equality -> . relation eqOP equality
    (39) relation -> . addition
    (40) relation -> . addition relOP relation
    (45) addition -> . term
    (46) addition -> . term addOP addition
    (49) term -> . factor
    (50) term -> . factor mulOP term
    (54) factor -> . primary
    (55) primary -> . literal
    (56) literal -> . INTEGER
    (57) literal -> . decimal
    (58) literal -> . STRING
    (59) literal -> . IDENTIFIER
    (60) literal -> . TRUE
    (61) literal -> . FALSE
    (66) decimal -> . INTEGER . INTEGER

    VAR             shift and go to state 3
    LET             shift and go to state 23
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 1
    IF              shift and go to state 13
    AND_OP          shift and go to state 26
    INTEGER         shift and go to state 15
    STRING          shift and go to state 22
    TRUE            shift and go to state 18
    FALSE           shift and go to state 24

    variableReassignment           shift and go to state 2
    statements                     shift and go to state 4
    program                        shift and go to state 5
    relation                       shift and go to state 6
    literal                        shift and go to state 7
    conjunction                    shift and go to state 8
    statement                      shift and go to state 9
    term                           shift and go to state 10
    factor                         shift and go to state 12
    equality                       shift and go to state 14
    addition                       shift and go to state 16
    expression                     shift and go to state 17
    ifStatement                    shift and go to state 19
    variableDeclaration            shift and go to state 20
    print                          shift and go to state 21
    decimal                        shift and go to state 25
    primary                        shift and go to state 27

state 1

    (9) print -> PRINT . LPAREN RPAREN
    (10) print -> PRINT . LPAREN IDENTIFIER RPAREN
    (11) print -> PRINT . LPAREN INTEGER RPAREN
    (12) print -> PRINT . LPAREN decimal RPAREN
    (13) print -> PRINT . LPAREN STRING RPAREN

    LPAREN          shift and go to state 28


state 2

    (6) statement -> variableReassignment .

    VAR             reduce using rule 6 (statement -> variableReassignment .)
    LET             reduce using rule 6 (statement -> variableReassignment .)
    IDENTIFIER      reduce using rule 6 (statement -> variableReassignment .)
    PRINT           reduce using rule 6 (statement -> variableReassignment .)
    IF              reduce using rule 6 (statement -> variableReassignment .)
    AND_OP          reduce using rule 6 (statement -> variableReassignment .)
    INTEGER         reduce using rule 6 (statement -> variableReassignment .)
    STRING          reduce using rule 6 (statement -> variableReassignment .)
    TRUE            reduce using rule 6 (statement -> variableReassignment .)
    FALSE           reduce using rule 6 (statement -> variableReassignment .)
    $end            reduce using rule 6 (statement -> variableReassignment .)
    RCURLY          reduce using rule 6 (statement -> variableReassignment .)


state 3

    (19) variableDeclaration -> VAR . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 29


state 4

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . expression
    (5) statement -> . variableDeclaration
    (6) statement -> . variableReassignment
    (7) statement -> . print
    (8) statement -> . ifStatement
    (29) expression -> . conjunction
    (30) expression -> . conjunction OR_OP expression
    (19) variableDeclaration -> . VAR IDENTIFIER EQUALS expression
    (20) variableDeclaration -> . LET IDENTIFIER EQUALS expression
    (14) variableReassignment -> . IDENTIFIER EQUALS expression
    (15) variableReassignment -> . IDENTIFIER PEQ expression
    (16) variableReassignment -> . IDENTIFIER MEQ expression
    (17) variableReassignment -> . IDENTIFIER MUEQ expression
    (18) variableReassignment -> . IDENTIFIER DEQ expression
    (9) print -> . PRINT LPAREN RPAREN
    (10) print -> . PRINT LPAREN IDENTIFIER RPAREN
    (11) print -> . PRINT LPAREN INTEGER RPAREN
    (12) print -> . PRINT LPAREN decimal RPAREN
    (13) print -> . PRINT LPAREN STRING RPAREN
    (21) ifStatement -> . IF conditionalStatement codeBlock
    (22) ifStatement -> . IF conditionalStatement codeBlock elseStatement
    (31) conjunction -> . equality
    (32) conjunction -> . AND_OP equality
    (35) equality -> . relation
    (36) equality -> . relation eqOP equality
    (39) relation -> . addition
    (40) relation -> . addition relOP relation
    (45) addition -> . term
    (46) addition -> . term addOP addition
    (49) term -> . factor
    (50) term -> . factor mulOP term
    (54) factor -> . primary
    (55) primary -> . literal
    (56) literal -> . INTEGER
    (57) literal -> . decimal
    (58) literal -> . STRING
    (59) literal -> . IDENTIFIER
    (60) literal -> . TRUE
    (61) literal -> . FALSE
    (66) decimal -> . INTEGER . INTEGER

    $end            reduce using rule 1 (program -> statements .)
    VAR             shift and go to state 3
    LET             shift and go to state 23
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 1
    IF              shift and go to state 13
    AND_OP          shift and go to state 26
    INTEGER         shift and go to state 15
    STRING          shift and go to state 22
    TRUE            shift and go to state 18
    FALSE           shift and go to state 24

    variableReassignment           shift and go to state 2
    expression                     shift and go to state 17
    ifStatement                    shift and go to state 19
    variableDeclaration            shift and go to state 20
    relation                       shift and go to state 6
    literal                        shift and go to state 7
    print                          shift and go to state 21
    conjunction                    shift and go to state 8
    statement                      shift and go to state 30
    term                           shift and go to state 10
    decimal                        shift and go to state 25
    factor                         shift and go to state 12
    equality                       shift and go to state 14
    addition                       shift and go to state 16
    primary                        shift and go to state 27

state 5

    (0) S' -> program .



state 6

    (35) equality -> relation .
    (36) equality -> relation . eqOP equality
    (37) eqOP -> . EQ_OP
    (38) eqOP -> . NE_OP

    OR_OP           reduce using rule 35 (equality -> relation .)
    VAR             reduce using rule 35 (equality -> relation .)
    LET             reduce using rule 35 (equality -> relation .)
    IDENTIFIER      reduce using rule 35 (equality -> relation .)
    PRINT           reduce using rule 35 (equality -> relation .)
    IF              reduce using rule 35 (equality -> relation .)
    AND_OP          reduce using rule 35 (equality -> relation .)
    INTEGER         reduce using rule 35 (equality -> relation .)
    STRING          reduce using rule 35 (equality -> relation .)
    TRUE            reduce using rule 35 (equality -> relation .)
    FALSE           reduce using rule 35 (equality -> relation .)
    $end            reduce using rule 35 (equality -> relation .)
    RCURLY          reduce using rule 35 (equality -> relation .)
    EQ_OP           shift and go to state 33
    NE_OP           shift and go to state 32

    eqOP                           shift and go to state 31

state 7

    (55) primary -> literal .

    MULT            reduce using rule 55 (primary -> literal .)
    DIV             reduce using rule 55 (primary -> literal .)
    MOD             reduce using rule 55 (primary -> literal .)
    PLUS            reduce using rule 55 (primary -> literal .)
    MINUS           reduce using rule 55 (primary -> literal .)
    LT_OP           reduce using rule 55 (primary -> literal .)
    LE_OP           reduce using rule 55 (primary -> literal .)
    GT_OP           reduce using rule 55 (primary -> literal .)
    GE_OP           reduce using rule 55 (primary -> literal .)
    EQ_OP           reduce using rule 55 (primary -> literal .)
    NE_OP           reduce using rule 55 (primary -> literal .)
    OR_OP           reduce using rule 55 (primary -> literal .)
    VAR             reduce using rule 55 (primary -> literal .)
    LET             reduce using rule 55 (primary -> literal .)
    IDENTIFIER      reduce using rule 55 (primary -> literal .)
    PRINT           reduce using rule 55 (primary -> literal .)
    IF              reduce using rule 55 (primary -> literal .)
    AND_OP          reduce using rule 55 (primary -> literal .)
    INTEGER         reduce using rule 55 (primary -> literal .)
    STRING          reduce using rule 55 (primary -> literal .)
    TRUE            reduce using rule 55 (primary -> literal .)
    FALSE           reduce using rule 55 (primary -> literal .)
    $end            reduce using rule 55 (primary -> literal .)
    RCURLY          reduce using rule 55 (primary -> literal .)


state 8

    (29) expression -> conjunction .
    (30) expression -> conjunction . OR_OP expression

    VAR             reduce using rule 29 (expression -> conjunction .)
    LET             reduce using rule 29 (expression -> conjunction .)
    IDENTIFIER      reduce using rule 29 (expression -> conjunction .)
    PRINT           reduce using rule 29 (expression -> conjunction .)
    IF              reduce using rule 29 (expression -> conjunction .)
    AND_OP          reduce using rule 29 (expression -> conjunction .)
    INTEGER         reduce using rule 29 (expression -> conjunction .)
    STRING          reduce using rule 29 (expression -> conjunction .)
    TRUE            reduce using rule 29 (expression -> conjunction .)
    FALSE           reduce using rule 29 (expression -> conjunction .)
    $end            reduce using rule 29 (expression -> conjunction .)
    RCURLY          reduce using rule 29 (expression -> conjunction .)
    OR_OP           shift and go to state 34


state 9

    (2) statements -> statement .

    VAR             reduce using rule 2 (statements -> statement .)
    LET             reduce using rule 2 (statements -> statement .)
    IDENTIFIER      reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    AND_OP          reduce using rule 2 (statements -> statement .)
    INTEGER         reduce using rule 2 (statements -> statement .)
    STRING          reduce using rule 2 (statements -> statement .)
    TRUE            reduce using rule 2 (statements -> statement .)
    FALSE           reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RCURLY          reduce using rule 2 (statements -> statement .)


state 10

    (45) addition -> term .
    (46) addition -> term . addOP addition
    (47) addOP -> . PLUS
    (48) addOP -> . MINUS

    LT_OP           reduce using rule 45 (addition -> term .)
    LE_OP           reduce using rule 45 (addition -> term .)
    GT_OP           reduce using rule 45 (addition -> term .)
    GE_OP           reduce using rule 45 (addition -> term .)
    EQ_OP           reduce using rule 45 (addition -> term .)
    NE_OP           reduce using rule 45 (addition -> term .)
    OR_OP           reduce using rule 45 (addition -> term .)
    VAR             reduce using rule 45 (addition -> term .)
    LET             reduce using rule 45 (addition -> term .)
    IDENTIFIER      reduce using rule 45 (addition -> term .)
    PRINT           reduce using rule 45 (addition -> term .)
    IF              reduce using rule 45 (addition -> term .)
    AND_OP          reduce using rule 45 (addition -> term .)
    INTEGER         reduce using rule 45 (addition -> term .)
    STRING          reduce using rule 45 (addition -> term .)
    TRUE            reduce using rule 45 (addition -> term .)
    FALSE           reduce using rule 45 (addition -> term .)
    $end            reduce using rule 45 (addition -> term .)
    RCURLY          reduce using rule 45 (addition -> term .)
    PLUS            shift and go to state 37
    MINUS           shift and go to state 36

    addOP                          shift and go to state 35

state 11

    (14) variableReassignment -> IDENTIFIER . EQUALS expression
    (15) variableReassignment -> IDENTIFIER . PEQ expression
    (16) variableReassignment -> IDENTIFIER . MEQ expression
    (17) variableReassignment -> IDENTIFIER . MUEQ expression
    (18) variableReassignment -> IDENTIFIER . DEQ expression
    (59) literal -> IDENTIFIER .

    EQUALS          shift and go to state 38
    PEQ             shift and go to state 42
    MEQ             shift and go to state 41
    MUEQ            shift and go to state 39
    DEQ             shift and go to state 40
    MULT            reduce using rule 59 (literal -> IDENTIFIER .)
    DIV             reduce using rule 59 (literal -> IDENTIFIER .)
    MOD             reduce using rule 59 (literal -> IDENTIFIER .)
    PLUS            reduce using rule 59 (literal -> IDENTIFIER .)
    MINUS           reduce using rule 59 (literal -> IDENTIFIER .)
    LT_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    LE_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    GT_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    GE_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    EQ_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    NE_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    OR_OP           reduce using rule 59 (literal -> IDENTIFIER .)
    VAR             reduce using rule 59 (literal -> IDENTIFIER .)
    LET             reduce using rule 59 (literal -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 59 (literal -> IDENTIFIER .)
    PRINT           reduce using rule 59 (literal -> IDENTIFIER .)
    IF              reduce using rule 59 (literal -> IDENTIFIER .)
    AND_OP          reduce using rule 59 (literal -> IDENTIFIER .)
    INTEGER         reduce using rule 59 (literal -> IDENTIFIER .)
    STRING          reduce using rule 59 (literal -> IDENTIFIER .)
    TRUE            reduce using rule 59 (literal -> IDENTIFIER .)
    FALSE           reduce using rule 59 (literal -> IDENTIFIER .)
    $end            reduce using rule 59 (literal -> IDENTIFIER .)
    RCURLY          reduce using rule 59 (literal -> IDENTIFIER .)


state 12

    (49) term -> factor .
    (50) term -> factor . mulOP term
    (51) mulOP -> . MULT
    (52) mulOP -> . DIV
    (53) mulOP -> . MOD

    PLUS            reduce using rule 49 (term -> factor .)
    MINUS           reduce using rule 49 (term -> factor .)
    LT_OP           reduce using rule 49 (term -> factor .)
    LE_OP           reduce using rule 49 (term -> factor .)
    GT_OP           reduce using rule 49 (term -> factor .)
    GE_OP           reduce using rule 49 (term -> factor .)
    EQ_OP           reduce using rule 49 (term -> factor .)
    NE_OP           reduce using rule 49 (term -> factor .)
    OR_OP           reduce using rule 49 (term -> factor .)
    VAR             reduce using rule 49 (term -> factor .)
    LET             reduce using rule 49 (term -> factor .)
    IDENTIFIER      reduce using rule 49 (term -> factor .)
    PRINT           reduce using rule 49 (term -> factor .)
    IF              reduce using rule 49 (term -> factor .)
    AND_OP          reduce using rule 49 (term -> factor .)
    INTEGER         reduce using rule 49 (term -> factor .)
    STRING          reduce using rule 49 (term -> factor .)
    TRUE            reduce using rule 49 (term -> factor .)
    FALSE           reduce using rule 49 (term -> factor .)
    $end            reduce using rule 49 (term -> factor .)
    RCURLY          reduce using rule 49 (term -> factor .)
    MULT            shift and go to state 46
    DIV             shift and go to state 44
    MOD             shift and go to state 43

    mulOP                          shift and go to state 45

state 13

    (21) ifStatement -> IF . conditionalStatement codeBlock
    (22) ifStatement -> IF . conditionalStatement codeBlock elseStatement
    (26) conditionalStatement -> . item boolOP item
    (27) conditionalStatement -> . TRUE
    (28) conditionalStatement -> . FALSE
    (62) item -> . INTEGER
    (63) item -> . IDENTIFIER
    (64) item -> . STRING
    (65) item -> . decimal
    (66) decimal -> . INTEGER . INTEGER

    TRUE            shift and go to state 49
    FALSE           shift and go to state 51
    INTEGER         shift and go to state 54
    IDENTIFIER      shift and go to state 52
    STRING          shift and go to state 50

    conditionalStatement           shift and go to state 47
    item                           shift and go to state 48
    decimal                        shift and go to state 53

state 14

    (31) conjunction -> equality .

    OR_OP           reduce using rule 31 (conjunction -> equality .)
    VAR             reduce using rule 31 (conjunction -> equality .)
    LET             reduce using rule 31 (conjunction -> equality .)
    IDENTIFIER      reduce using rule 31 (conjunction -> equality .)
    PRINT           reduce using rule 31 (conjunction -> equality .)
    IF              reduce using rule 31 (conjunction -> equality .)
    AND_OP          reduce using rule 31 (conjunction -> equality .)
    INTEGER         reduce using rule 31 (conjunction -> equality .)
    STRING          reduce using rule 31 (conjunction -> equality .)
    TRUE            reduce using rule 31 (conjunction -> equality .)
    FALSE           reduce using rule 31 (conjunction -> equality .)
    $end            reduce using rule 31 (conjunction -> equality .)
    RCURLY          reduce using rule 31 (conjunction -> equality .)


state 15

    (56) literal -> INTEGER .
    (66) decimal -> INTEGER . . INTEGER

    MULT            reduce using rule 56 (literal -> INTEGER .)
    DIV             reduce using rule 56 (literal -> INTEGER .)
    MOD             reduce using rule 56 (literal -> INTEGER .)
    PLUS            reduce using rule 56 (literal -> INTEGER .)
    MINUS           reduce using rule 56 (literal -> INTEGER .)
    LT_OP           reduce using rule 56 (literal -> INTEGER .)
    LE_OP           reduce using rule 56 (literal -> INTEGER .)
    GT_OP           reduce using rule 56 (literal -> INTEGER .)
    GE_OP           reduce using rule 56 (literal -> INTEGER .)
    EQ_OP           reduce using rule 56 (literal -> INTEGER .)
    NE_OP           reduce using rule 56 (literal -> INTEGER .)
    OR_OP           reduce using rule 56 (literal -> INTEGER .)
    VAR             reduce using rule 56 (literal -> INTEGER .)
    LET             reduce using rule 56 (literal -> INTEGER .)
    IDENTIFIER      reduce using rule 56 (literal -> INTEGER .)
    PRINT           reduce using rule 56 (literal -> INTEGER .)
    IF              reduce using rule 56 (literal -> INTEGER .)
    AND_OP          reduce using rule 56 (literal -> INTEGER .)
    INTEGER         reduce using rule 56 (literal -> INTEGER .)
    STRING          reduce using rule 56 (literal -> INTEGER .)
    TRUE            reduce using rule 56 (literal -> INTEGER .)
    FALSE           reduce using rule 56 (literal -> INTEGER .)
    $end            reduce using rule 56 (literal -> INTEGER .)
    RCURLY          reduce using rule 56 (literal -> INTEGER .)
    .               shift and go to state 55


state 16

    (39) relation -> addition .
    (40) relation -> addition . relOP relation
    (41) relOP -> . LT_OP
    (42) relOP -> . LE_OP
    (43) relOP -> . GT_OP
    (44) relOP -> . GE_OP

    EQ_OP           reduce using rule 39 (relation -> addition .)
    NE_OP           reduce using rule 39 (relation -> addition .)
    OR_OP           reduce using rule 39 (relation -> addition .)
    VAR             reduce using rule 39 (relation -> addition .)
    LET             reduce using rule 39 (relation -> addition .)
    IDENTIFIER      reduce using rule 39 (relation -> addition .)
    PRINT           reduce using rule 39 (relation -> addition .)
    IF              reduce using rule 39 (relation -> addition .)
    AND_OP          reduce using rule 39 (relation -> addition .)
    INTEGER         reduce using rule 39 (relation -> addition .)
    STRING          reduce using rule 39 (relation -> addition .)
    TRUE            reduce using rule 39 (relation -> addition .)
    FALSE           reduce using rule 39 (relation -> addition .)
    $end            reduce using rule 39 (relation -> addition .)
    RCURLY          reduce using rule 39 (relation -> addition .)
    LT_OP           shift and go to state 60
    LE_OP           shift and go to state 57
    GT_OP           shift and go to state 56
    GE_OP           shift and go to state 58

    relOP                          shift and go to state 59

state 17

    (4) statement -> expression .

    VAR             reduce using rule 4 (statement -> expression .)
    LET             reduce using rule 4 (statement -> expression .)
    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    AND_OP          reduce using rule 4 (statement -> expression .)
    INTEGER         reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    RCURLY          reduce using rule 4 (statement -> expression .)


state 18

    (60) literal -> TRUE .

    MULT            reduce using rule 60 (literal -> TRUE .)
    DIV             reduce using rule 60 (literal -> TRUE .)
    MOD             reduce using rule 60 (literal -> TRUE .)
    PLUS            reduce using rule 60 (literal -> TRUE .)
    MINUS           reduce using rule 60 (literal -> TRUE .)
    LT_OP           reduce using rule 60 (literal -> TRUE .)
    LE_OP           reduce using rule 60 (literal -> TRUE .)
    GT_OP           reduce using rule 60 (literal -> TRUE .)
    GE_OP           reduce using rule 60 (literal -> TRUE .)
    EQ_OP           reduce using rule 60 (literal -> TRUE .)
    NE_OP           reduce using rule 60 (literal -> TRUE .)
    OR_OP           reduce using rule 60 (literal -> TRUE .)
    VAR             reduce using rule 60 (literal -> TRUE .)
    LET             reduce using rule 60 (literal -> TRUE .)
    IDENTIFIER      reduce using rule 60 (literal -> TRUE .)
    PRINT           reduce using rule 60 (literal -> TRUE .)
    IF              reduce using rule 60 (literal -> TRUE .)
    AND_OP          reduce using rule 60 (literal -> TRUE .)
    INTEGER         reduce using rule 60 (literal -> TRUE .)
    STRING          reduce using rule 60 (literal -> TRUE .)
    TRUE            reduce using rule 60 (literal -> TRUE .)
    FALSE           reduce using rule 60 (literal -> TRUE .)
    $end            reduce using rule 60 (literal -> TRUE .)
    RCURLY          reduce using rule 60 (literal -> TRUE .)


state 19

    (8) statement -> ifStatement .

    VAR             reduce using rule 8 (statement -> ifStatement .)
    LET             reduce using rule 8 (statement -> ifStatement .)
    IDENTIFIER      reduce using rule 8 (statement -> ifStatement .)
    PRINT           reduce using rule 8 (statement -> ifStatement .)
    IF              reduce using rule 8 (statement -> ifStatement .)
    AND_OP          reduce using rule 8 (statement -> ifStatement .)
    INTEGER         reduce using rule 8 (statement -> ifStatement .)
    STRING          reduce using rule 8 (statement -> ifStatement .)
    TRUE            reduce using rule 8 (statement -> ifStatement .)
    FALSE           reduce using rule 8 (statement -> ifStatement .)
    $end            reduce using rule 8 (statement -> ifStatement .)
    RCURLY          reduce using rule 8 (statement -> ifStatement .)


state 20

    (5) statement -> variableDeclaration .

    VAR             reduce using rule 5 (statement -> variableDeclaration .)
    LET             reduce using rule 5 (statement -> variableDeclaration .)
    IDENTIFIER      reduce using rule 5 (statement -> variableDeclaration .)
    PRINT           reduce using rule 5 (statement -> variableDeclaration .)
    IF              reduce using rule 5 (statement -> variableDeclaration .)
    AND_OP          reduce using rule 5 (statement -> variableDeclaration .)
    INTEGER         reduce using rule 5 (statement -> variableDeclaration .)
    STRING          reduce using rule 5 (statement -> variableDeclaration .)
    TRUE            reduce using rule 5 (statement -> variableDeclaration .)
    FALSE           reduce using rule 5 (statement -> variableDeclaration .)
    $end            reduce using rule 5 (statement -> variableDeclaration .)
    RCURLY          reduce using rule 5 (statement -> variableDeclaration .)


state 21

    (7) statement -> print .

    VAR             reduce using rule 7 (statement -> print .)
    LET             reduce using rule 7 (statement -> print .)
    IDENTIFIER      reduce using rule 7 (statement -> print .)
    PRINT           reduce using rule 7 (statement -> print .)
    IF              reduce using rule 7 (statement -> print .)
    AND_OP          reduce using rule 7 (statement -> print .)
    INTEGER         reduce using rule 7 (statement -> print .)
    STRING          reduce using rule 7 (statement -> print .)
    TRUE            reduce using rule 7 (statement -> print .)
    FALSE           reduce using rule 7 (statement -> print .)
    $end            reduce using rule 7 (statement -> print .)
    RCURLY          reduce using rule 7 (statement -> print .)


state 22

    (58) literal -> STRING .

    MULT            reduce using rule 58 (literal -> STRING .)
    DIV             reduce using rule 58 (literal -> STRING .)
    MOD             reduce using rule 58 (literal -> STRING .)
    PLUS            reduce using rule 58 (literal -> STRING .)
    MINUS           reduce using rule 58 (literal -> STRING .)
    LT_OP           reduce using rule 58 (literal -> STRING .)
    LE_OP           reduce using rule 58 (literal -> STRING .)
    GT_OP           reduce using rule 58 (literal -> STRING .)
    GE_OP           reduce using rule 58 (literal -> STRING .)
    EQ_OP           reduce using rule 58 (literal -> STRING .)
    NE_OP           reduce using rule 58 (literal -> STRING .)
    OR_OP           reduce using rule 58 (literal -> STRING .)
    VAR             reduce using rule 58 (literal -> STRING .)
    LET             reduce using rule 58 (literal -> STRING .)
    IDENTIFIER      reduce using rule 58 (literal -> STRING .)
    PRINT           reduce using rule 58 (literal -> STRING .)
    IF              reduce using rule 58 (literal -> STRING .)
    AND_OP          reduce using rule 58 (literal -> STRING .)
    INTEGER         reduce using rule 58 (literal -> STRING .)
    STRING          reduce using rule 58 (literal -> STRING .)
    TRUE            reduce using rule 58 (literal -> STRING .)
    FALSE           reduce using rule 58 (literal -> STRING .)
    $end            reduce using rule 58 (literal -> STRING .)
    RCURLY          reduce using rule 58 (literal -> STRING .)


state 23

    (20) variableDeclaration -> LET . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 61


state 24

    (61) literal -> FALSE .

    MULT            reduce using rule 61 (literal -> FALSE .)
    DIV             reduce using rule 61 (literal -> FALSE .)
    MOD             reduce using rule 61 (literal -> FALSE .)
    PLUS            reduce using rule 61 (literal -> FALSE .)
    MINUS           reduce using rule 61 (literal -> FALSE .)
    LT_OP           reduce using rule 61 (literal -> FALSE .)
    LE_OP           reduce using rule 61 (literal -> FALSE .)
    GT_OP           reduce using rule 61 (literal -> FALSE .)
    GE_OP           reduce using rule 61 (literal -> FALSE .)
    EQ_OP           reduce using rule 61 (literal -> FALSE .)
    NE_OP           reduce using rule 61 (literal -> FALSE .)
    OR_OP           reduce using rule 61 (literal -> FALSE .)
    VAR             reduce using rule 61 (literal -> FALSE .)
    LET             reduce using rule 61 (literal -> FALSE .)
    IDENTIFIER      reduce using rule 61 (literal -> FALSE .)
    PRINT           reduce using rule 61 (literal -> FALSE .)
    IF              reduce using rule 61 (literal -> FALSE .)
    AND_OP          reduce using rule 61 (literal -> FALSE .)
    INTEGER         reduce using rule 61 (literal -> FALSE .)
    STRING          reduce using rule 61 (literal -> FALSE .)
    TRUE            reduce using rule 61 (literal -> FALSE .)
    FALSE           reduce using rule 61 (literal -> FALSE .)
    $end            reduce using rule 61 (literal -> FALSE .)
    RCURLY          reduce using rule 61 (literal -> FALSE .)


state 25

    (57) literal -> decimal .
